--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   "author": "themegasm",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "css-loader": "^0.26.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.1",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.1",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.0-rc.0",
     "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
