--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^0.26.4",
+    "css-loader": "^3.6.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.1",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.2",
-    "webpack": "^2.2.0-rc.0",
-    "webpack-dev-server": "^2.3.0"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
